# yfinance-wrapper

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  LICENSE  Makefile  README.md  pyproject.toml
yfinance_wrapper/: app.py  helpers.py  parameters.py
